# Stationeers-IC10

./: .gitignore  .luarc.json  devenv.nix  main.py  noxfile.py  pyproject.toml
base-atmospherics/: hazard-warning.ic10  regulate-room-input.ic10  regulate-room-input.lua
creature-comforts/: toggle-doors-control.ic10  toggle-lights-control.ic10
fermentation/: fermentation.lua  ic.d.lua
fluid-management/: TVP-pressure-control.ic10  canister-filler-regulator-2.ic10  canister-filler-regulator.ic10  oxite-volatiles-crushing-control.ic10
fluid-management/cooling/: NESW radiator control.ic10  NESW-radiator-control.ic10  simple-cooling-control.ic10
lualib/: DeviceById.lua  PrefabNamed.lua
mining/: centrifuge-auto-purge.ic10  deep-mining-outpost.ic10
power/: NESW-solar-control.ic10  charge-actions.ic10  charge-broadcast.ic10  charge-display.ic10
rocketry/: pfge-rocket-manager.ic10  pressure-fed-gas-engine-displays.ic10  presure-fed-gas-engine-pressurizer-2.ic10  presure-fed-gas-engine-pressurizer.ic10  umbilical-control-2.ic10  umbilical-control.ic10
src/stationeers_ic10/: compile_lua.py  main.py
typestubs/: ic.d.lua  util.d.lua
venus/: compile.py  fermentation-ui.lua  fermentation.lua  heat-pump.ic10  ic.d.lua  intake-filtration.lua  util.d.lua
