[project]
name = "stationeers-ic10"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["click>=8.3.3"]

[dependency-groups]
dev = [
  "isort>=8.0.1",
  "nox>=2026.4.10",
  "nox-uv>=0.7.1",
  "ruff>=0.15.12",
  "ty>=0.0.33",
]

[tool.isort]
line-length = 79

[tool.ruff]
line-length = 79
