[project]
name = "stationeers-ic10"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.3.3",
    "httpx>=0.28.1",
]

[project.scripts]
stationeers-ic10 = "stationeers_ic10.main:main"

[build-system]
requires = ["uv_build>=0.11.8,<0.12"]
build-backend = "uv_build"

[dependency-groups]
dev = [
  "isort>=8.0.1",
  "nox>=2026.4.10",
  "nox-uv>=0.7.1",
  "ruff>=0.15.12",
  "ty>=0.0.33",
]

[tool.isort]
line_length = 79
extend_skip = ['.nox']

[tool.ruff]
line-length = 79
